[package]
name = "crank-feed-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.3", features = ["derive"] }
solana-client = "^1.18.26"
solana-sdk = "^1.18.26"
tokio = { version = "^1", features = ["full"] }
switchboard-on-demand-client = { version = "0.2.12", features = ["devnet"] }
